<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black">
    <RelativeLayout
        android:id="@+id/logolayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_joy"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logo"
            android:textColor="@color/White"
            android:layout_marginTop="45dp"
            android:textSize="50dp"
            />
        <TextView
            android:id="@+id/txt_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_joy"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/tagline"
            android:textColor="@color/White"
            android:textSize="20dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/logolayout"
        android:layout_width="match_parent"
        android:layout_marginTop="200dp"

        android:layout_height="wrap_content">

        <Button
            android:id="@+id/guestbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custombtnblack"
            android:text="@string/guesttagline"
            android:textColor="@color/White"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/adminbtn"
            android:layout_below="@+id/guestbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombtnblack"
            android:text="@string/admintagline"
            android:textColor="@color/White"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>


</RelativeLayout>
