<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <VideoView
        android:id="@+id/videoview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"></VideoView>

    <RelativeLayout
        android:id="@+id/rl_joy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp">

        <TextView
            android:id="@+id/txt_joy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/Logo"
            android:textColor="@color/White"
            android:textSize="50dp"
            android:textStyle="italic"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/txt_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_joy"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/tagline"
            android:textColor="@color/White"
            android:textSize="20dp"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_joy"
        android:layout_marginBottom="42dp">

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="63dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custombtnblack"
            android:text="@string/signinbtn"
            android:textColor="@color/White" />
    </RelativeLayout>


</RelativeLayout>
